@@ -6,10 +6,17 @@ All notable changes to this project will be documented in this file.
 The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this project adheres to [[http://semver.org][Semantic Versioning]].
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.1...HEAD][Unreleased]]
+*** Changed
+- Publish package on MELPA [[https://github.com/melpa/melpa/pull/6074][(melpa/melpa#6074)]]
+
 *** Fixed
 - In the BNF there are no strings thus treat ' and " as a regular symbols
 - Minor code cleanup: removed no longer needed ~comment-*~ variables
 - In the BNF there are no grouping brackets except angle ones. Fixed
+
+*** Removed
+- Removing the ~bnf-mode-version~ function. Users can easily call ~describe-package~
+  or ~pkg-info-package-version~ interactively if they want to get this information [[https://github.com/sergeyklay/bnf-mode/issues/1][(#1)]]
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.0...0.3.1][0.3.1]] - 2019-03-17
 *** Fixed
